Implement arrival-time filter.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_subdirectory(nartherion/gcc/common)
-add_subdirectory(nartherion/gcc/math)
+add_subdirectory(nartherion/gcc/arrival_time_filter)
